--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,10 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
+    compile('com.mikepenz:fastadapter:1.4.4@aar') {
+        transitive = true
+    }
+    compile 'com.mikepenz:fastadapter-extensions:1.4.2.1@aar'
+    //The tiny Materialize library used for its useful helper classes
+    compile 'com.mikepenz:materialize:0.8.8@aar'
 }
