--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
@@ -30,4 +30,6 @@ dependencies {
     compile 'com.mikepenz:fastadapter-extensions:1.4.2.1@aar'
     //The tiny Materialize library used for its useful helper classes
     compile 'com.mikepenz:materialize:0.8.8@aar'
+    compile 'com.android.support:recyclerview-v7:23.3.0'
+    compile 'com.android.support:cardview-v7:23.3.0'
 }
