--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,16 +29,14 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:8.4.0'
     compile 'com.android.support:recyclerview-v7:23.3.0'
     compile 'com.android.support:cardview-v7:23.3.0'
-
     compile('com.mikepenz:fastadapter:1.4.4@aar') {
         transitive = true
     }
     compile 'com.mikepenz:fastadapter-extensions:1.4.2.1@aar'
     //The tiny Materialize library used for its useful helper classes
     compile 'com.mikepenz:materialize:0.8.8@aar'
-
     compile 'org.parceler:parceler-api:1.1.1'
     apt 'org.parceler:parceler:1.1.1'
-
     compile 'io.reactivex:rxjava:1.1.5'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.7.4'
 }
