--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     apt 'org.parceler:parceler:1.1.1'
     compile 'io.reactivex:rxjava:1.1.5'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.7.4'
+    compile 'com.estimote:sdk:0.10.4@aar'
 }
