--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,15 +20,22 @@ android {
     }
 }
 
+repositories {
+    maven {
+        url 'https://repo.spring.io/libs-milestone'
+    }
+    mavenCentral()
+}
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.android.support:design:23.3.0'
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
     compile 'com.google.android.gms:play-services-maps:8.4.0'
     compile 'com.google.android.gms:play-services-location:8.4.0'
-    compile 'com.android.support:recyclerview-v7:23.3.0'
-    compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:cardview-v7:23.4.0'
     compile('com.mikepenz:fastadapter:1.4.4@aar') {
         transitive = true
     }
@@ -40,4 +47,6 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.5'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.7.4'
     compile 'com.estimote:sdk:0.10.4@aar'
+    compile 'com.facebook.android:facebook-android-sdk:4.+'
+    compile 'org.springframework.android:spring-android-rest-template:2.0.0.M3'
 }
