--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,12 +23,12 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.android.support:design:23.3.0'
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
     compile 'com.google.android.gms:play-services-maps:8.4.0'
     compile 'com.google.android.gms:play-services-location:8.4.0'
-    compile 'com.android.support:recyclerview-v7:23.3.0'
-    compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:cardview-v7:23.4.0'
 
     compile('com.mikepenz:fastadapter:1.4.4@aar') {
         transitive = true
@@ -36,9 +36,9 @@ dependencies {
     compile 'com.mikepenz:fastadapter-extensions:1.4.2.1@aar'
     //The tiny Materialize library used for its useful helper classes
     compile 'com.mikepenz:materialize:0.8.8@aar'
-
+    compile 'com.estimote:sdk:0.10.4@aar'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
-
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.7.4'
     compile 'org.parceler:parceler-api:1.1.1'
     apt 'org.parceler:parceler:1.1.1'
 }
