--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,16 @@
         android:icon="@drawable/splash"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        >
         <activity
             android:name=".activity.MainActivity"
+            android:screenOrientation="portrait"
             android:label="Groups"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.CreateGroupActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_home"
             android:parentActivityName=".activity.FriendsActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -33,6 +36,7 @@
         </activity>
         <activity
             android:name=".activity.FriendsActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_friends"
             android:parentActivityName=".activity.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -50,6 +54,7 @@
 
         <activity
             android:name=".activity.GroupActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_group"
             android:parentActivityName=".activity.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -59,6 +64,7 @@
         </activity>
         <activity
             android:name=".activity.SplashActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -68,6 +74,7 @@
         </activity>
         <activity
             android:name="com.facebook.FacebookActivity"
+            android:screenOrientation="portrait"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
@@ -76,7 +83,9 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
-        <activity android:name=".activity.LoginActivity" />
+        <activity
+            android:name=".activity.LoginActivity"
+            android:screenOrientation="portrait"/>
 
     </application>
 
