Changed a lot of stuff. Dynamic group activity, work on beacons etc!!! LETS HOPE FOR THE BEST.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,6 +85,10 @@
         <activity
             android:name=".activity.LoginActivity"
             android:screenOrientation="portrait" />
+
+        <service
+            android:name=".service.UpdateGroup"
+            android:exported="false"></service>
     </application>
 
 </manifest>
